Update and rename example-note.xdby to example-note.html

--- a/example-note.html
+++ b/example-note.html
@@ -1,3 +1,4 @@
+<!-- - --- -- -- --  -- - - -- - -- - -- - -- -- - -- !>
 XD.BY Registration Note
 ------------------------------
 Contact Info:
@@ -22,3 +23,66 @@ Registration Records:
 
 Optional Info:
 • Date of registration: DATE_GOES_HERE
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+<script>window.location.href = "https://xdby-domains.github.io/not-available/"</script>
+
+
