--- a/example-note.html
+++ b/example-note.html
@@ -84,6 +84,6 @@ Optional Info:
 
 
 -->
-<script>window.location.href = "https://xdby-domains.github.io/not-available/"</script>
+<script>window.location.href = "https://xdqa-domains.github.io/not-available/"</script>
 
 
