--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "https://xdby-domains.github.io/</script>
+<script>window.location.href = "https://xdqa-domains.github.io/</script>
