--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "https://xdby-domains.github.io/available/"</script>
+<script>window.location.href = "https://xdqa-domains.github.io/available/"</script>
